--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">MyScheduler</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">一覧表示</string>
-    <string name="second_fragment_label">カレンダー表示</string>
+    <string name="first_fragment_label">予定</string>
+    <string name="second_fragment_label">カレンダー</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
@@ -12,7 +12,7 @@
     </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="schedule_edit_text">スケジュール編集</string>
+    <string name="schedule_edit_text">スケジュール</string>
     <string name="date_text">日付</string>
     <string name="time_text">時間</string>
     <string name="title_text">タイトル</string>
@@ -21,4 +21,6 @@
     <string name="select_time_text">時間選択</string>
     <string name="save_text">保存</string>
     <string name="delete_text">削除</string>
+    <string name="予定入力" />
+    <string name="スケージュール編集" />
 </resources>
