サクラダ　キャラクター画面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="kisekae">着せ替え</string>
     <string name="sanpo">散歩</string>
     <string name="kaiwa">会話</string>
+    <string name="schedule">スケジュール編集</string>
+    <string name="スケジュール編集">schedule_edit</string>
 </resources>
